--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Bitcoin Cleanup Blog
-subtitle: The official bitcoin cleanup blog
+subtitle: The official Bitcoin Cleanup blog
 ---
